# RetractionPollution

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  retractionpollution.Rproj
R/: analysis.R  cli.R  config.R  control.R  crawler.R  manuscript.R  metadata.R  openalex.R  opencitations.R  opencitations_pipeline.R  package.R  report.R  rw.R  seed_units.R  storage.R  util.R  validation.R
audit/: audit.md  full-study-run-2026-07-01.md  re-audit-2026-06-30.md  re-audit-2026-07-01-glm52.md  study-audit-2026-06-30.md  study-audit-2026-07-02.md
legacy/: .env.example  README.md  pyproject.toml
legacy/src/retraction_pollution/: __init__.py  analysis.py  cli.py  config.py  crawler.py  openalex.py  opencitations.py  opencitations_pipeline.py  report.py  rw.py  storage.py  util.py
legacy/tests/: test_crawler.py  test_openalex.py  test_opencitations.py  test_opencitations_pipeline.py  test_rw.py  test_storage.py  test_util.py
man/: DOI_UNAVAILABLE.Rd  OPENCITATIONS_INDEX_API.Rd  OpenAlexPage.Rd  OpenCitation.Rd  OpenCitationsClient.Rd  RETRACTION_WATCH_URL.Rd  SUBCOMMAND_DISPATCH.Rd  Settings_from_env.Rd  analysis_edge_scope.Rd  analysis_scale_counts.Rd  bridge_metrics.Rd  build_control_comparison.Rd  build_graph.Rd  build_manuscript.Rd  build_manuscript_figures.Rd  build_parser.Rd  canonical_seed_records.Rd  chunked.Rd  clean_doi.Rd  clean_pmid.Rd  cmd_analyze.Rd  cmd_crawl.Rd  cmd_crawl_opencitations.Rd  cmd_fetch_rw.Rd  cmd_manuscript.Rd  cmd_prepare_opencitations.Rd  cmd_prepare_seeds.Rd  cmd_rate_limit.Rd  cmd_report.Rd  cmd_resolve_seeds.Rd  doi_url.Rd  (+63 more)
(+25 files in other folders)
