[project]
name = "retraction-pollution"
version = "0.1.0"
description = "Trace and analyze citation pollution from retracted and concerning scientific papers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ahmad Sofi-Mahmudi" }]
dependencies = [
  "duckdb>=1.1.0",
  "matplotlib>=3.8.0",
  "networkx>=3.2.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
rpollute = "retraction_pollution.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retraction_pollution"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
